hphp/test/zend/bad/ext-standard-general_functions/bug46587.php
<?php

var_dump(mt_rand(3,8));
var_dump(mt_rand(8,3));

echo "Done.\n";
?>